fix home page to fit on iphone.

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,7 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  
 }
 
 :root {
@@ -97,13 +97,7 @@ body{
     padding: 0.5rem 0;
   }
 
-  .home{
-    margin-top: 20px;
-    margin-left: 10px;
-    width: 100%;
-
-  }
-
+ 
   .center {
     display: block;
     margin-left: auto;
